--- a/store/blocks/desktop/components/home/home.jsonc
+++ b/store/blocks/desktop/components/home/home.jsonc
@@ -1,4 +1,9 @@
 {
+  "store.home": {
+    "blocks": [
+      "flex-layout.row#home__section-1"
+    ]
+  },
   "flex-layout.row#home__section-1": {
     "title": "DESKTOP Row with text",
     "children": [
