feat: menu desktop

--- a/store/blocks/desktop/components/header/header.jsonc
+++ b/store/blocks/desktop/components/header/header.jsonc
@@ -7,108 +7,13 @@
   },
   "header-layout.desktop": {
     "children": [
-      "slider-layout#header__slider--children",
+      "slider-layout#header__slider-top",
       "flex-layout.row#header__section--subheader",
       "sticky-layout#desktop",
       "rich-text#section-one"
     ]
   },
-  "slider-layout#header__slider--children": {
-    "title": "Slider con hijos declarados",
-    "props": {
-      "itemsPerPage": {
-        "desktop": 1,
-        "tablet": 1,
-        "mobile": 1
-      },
-      "infinite": true,
-      "blockClass": "header__slider",
-      "showNavigationArrows": "never",
-      "showPaginationDots": "never",
-      "autoplay": {
-        "timeout": 4000,
-        "stopOnHover": true
-      }
-    },
-    "children": [
-      "rich-text#header__slider--one",
-      "rich-text#header__slider--two"
-    ]
-  },
-  "rich-text#header__slider--one": {
-    "props": {
-      "blockClass": "text-message",
-      "text": "✨COMPRA MÁS, AHORRA MÁS✨"
-    }
-  },
-  "rich-text#header__slider--two": {
-    "props": {
-      "blockClass": "text-message",
-    "text": "💎¡LAS COLABORACIONES DE ADIDAS SON UNA EXPRESIÓN DE CREATIVIDAD!💎"
-    }
-  },
-  "flex-layout.row#header__section--subheader": {
-    "title": "sub header",
-    "children": [
-      "flex-layout.col#section__one--text",
-      "flex-layout.col#section__two--text",
-      "flex-layout.col#section__three--text",
-      "flex-layout.col#section__four--text"
-    ],
-    "props": {
-      "colSizing": "auto",
-      "blockClass": "header__section--subheader"
-    }
-  },
-  "flex-layout.col#section__one--text": {
-    "children":[
-      "rich-text#section__one--text"
-    ]
-  },
-  "flex-layout.col#section__two--text": {
-    "children":[
-      "rich-text#section__two--text"
-    ]
-  },
-  "flex-layout.col#section__three--text": {
-    "children":[
-      "rich-text#section__three--text"
-    ]
-  },
-  "flex-layout.col#section__four--text": {
-    "children":[
-      "rich-text#section__four--text"
-    ]
-  },
-  "rich-text#section__one--text": {
-    "props": {
-      "text" : "ayuda",
-      "blockClass" : "header__support--text"
-      // "textPosition" : "RIGHT"
-    }
-  },
-  "rich-text#section__two--text": {
-    "props": {
-      "text" : "cambios y devoluciones",
-      "blockClass" : "header__support--text"
-      // "textPosition" : "RIGHT"
-    }
-  },
-  "rich-text#section__three--text": {
-    "props": {
-      "text" : "seguimiento de pedidos",
-      "blockClass" : "header__support--text"
-      // "textPosition" : "CENTER"
-    }
-  },
-  "rich-text#section__four--text": {
-    "props": {
-      "text" : "unete al club",
-      "blockClass" : "header__support--text"
-      // "textPosition" : "left"
 
-    }
-  },
   "rich-text#section-one": {
     "title": "text section one",
     "props": {
@@ -138,7 +43,8 @@
     },
     "children": [
       "flex-layout.col#logo-desktop",
-      "flex-layout.row#spacer",
+      // "flex-layout.row#spacer",
+      "flex-layout.row#header__bottom--menu",
       "search-bar",
       // "locale-switcher",
       "login",
@@ -146,102 +52,6 @@
     ]
   },
 
-  "flex-layout.row#spacer": {
-    "children": [
-      "flex-layout.col#header__menu--one",
-      "flex-layout.col#header__menu--two",
-      "flex-layout.col#header__menu--three",
-      "flex-layout.col#header__menu--four",
-      "flex-layout.col#header__menu--five",
-      "flex-layout.col#header__menu--six"
-    ],
-    "props": {
-        "colSizing": "auto",
-        "blockClass": "header__menu--middle"
-    }
-  },
-  "flex-layout.col#header__menu--one": {
-    "children": [
-      "rich-text#header__menu--one"
-    ]
-  },
-      "flex-layout.col#header__menu--two": {
-        "children": [
-          "rich-text#header__menu--two"
-        ],
-        "props": {
-        }
-      },
-      "flex-layout.col#header__menu--three": {
-        "children": [
-          "rich-text#header__menu--three"
-        ],
-        "props": {
-        }
-      },
-      "flex-layout.col#header__menu--four": {
-        "children": [
-          "rich-text#header__menu--four"
-        ],
-        "props": {
-        }
-      },
-      "flex-layout.col#header__menu--five": {
-        "children": [
-          "rich-text#header__menu--five"
-        ],
-        "props": {
-        }
-      },
-      "flex-layout.col#header__menu--six": {
-        "children": [
-          "rich-text#header__menu--six"
-        ],
-        "props": {
-        }
-      },
-      "rich-text#header__menu--one": {
-        "props": {
-          "text": "MUJER",
-          "blockClass" : "header__menu--text",
-          "textPosition" : "CENTER"
-        }
-      },
-      "rich-text#header__menu--two": {
-        "props": {
-          "text": "HOMBRE",
-          "blockClass" : "header__menu--text",
-          "textPosition" : "CENTER"
-        }
-      },
-      "rich-text#header__menu--three": {
-        "props": {
-          "text": "NIÑOS",
-          "blockClass" : "header__menu--text",
-          "textPosition" : "CENTER"
-        }
-      },
-      "rich-text#header__menu--four": {
-        "props": {
-          "text": "NOVEDADES",
-          "blockClass" : "header__menu--text--sub",
-          "textPosition" : "CENTER"
-        }
-      },
-      "rich-text#header__menu--five": {
-        "props": {
-          "text": "DEPORTE",
-          "blockClass" : "header__menu--text--sub",
-          "textPosition" : "CENTER"
-        }
-      },
-      "rich-text#header__menu--six": {
-        "props": {
-          "text": "MUNDO ADIDAS",
-          "blockClass" : "header__menu--text--sub",
-          "textPosition" : "CENTER"
-        }
-      },
   "flex-layout.col#logo-desktop": {
     "props": {
       "verticalAlign": "middle"
@@ -277,7 +87,7 @@
     "children": [
       "drawer",
       "logo",
-      "flex-layout.row#spacer",
+      // "flex-layout.row#spacer",
       "login",
       "minicart.v2"
     ],
