--- a/store/blocks/desktop/components/header/header.jsonc
+++ b/store/blocks/desktop/components/header/header.jsonc
@@ -9,29 +9,11 @@
     "children": [
       "slider-layout#header__slider-top",
       "flex-layout.row#header__section--subheader",
-      "sticky-layout#desktop",
+      "flex-layout.row#desktop",
       "rich-text#section-one"
     ]
   },
 
-  "rich-text#section-one": {
-    "title": "text section one",
-    "props": {
-      "textAlignment": "CENTER",
-      "textPosition": "CENTER",
-      "text": "Suscríbete en adiClub y obtén 15% de descuento.Únete ya",
-      "textColor": "c-on-emphasis",
-      "font": "action--small",
-      "blockClass": "help-message"
-    }
-  },
-  "sticky-layout#desktop": {
-    "title": "header sticky",
-    "props": {
-      "blockClass": "sticky-header"
-    },
-    "children": ["flex-layout.row#desktop"]
-  },
   "flex-layout.row#desktop": {
     "props": {
       "horizontalAlign": "center",
@@ -39,66 +21,52 @@
       "preventHorizontalStretch": true,
       "preventVerticalStretch": true,
       "fullWidth": true,
-      "blockClass": "flex-container"
+      "blockClass": "header__bottom"
     },
     "children": [
       "flex-layout.col#logo-desktop",
+      // "image#header__logo",
       // "flex-layout.row#spacer",
+      "flex-layout.col#spacer__desktop-one",
       "flex-layout.row#header__bottom--menu",
+      "flex-layout.col#spacer__desktop-two",
       "search-bar",
-      // "locale-switcher",
-      "login",
-      "minicart.v2"
+      "flex-layout.row#header__bottom--user"
     ]
   },
 
-  "flex-layout.col#logo-desktop": {
-    "props": {
-      "verticalAlign": "middle"
-    },
-    "children": ["logo"]
-  },
-  "logo": {
-    "props": {
-      "title": "Logo",
-      "href": "/",
-      "url": "assets/img/header/Adidas_logo_two.svg",
-      "width": "93",
-      "blockClass": "container-logo"
-    }
-  },
-  "login": {
-    "props": {
-      "emailAndPasswordTitle": "LOG-IN",
-      "accessCodeTitle": "Acess Code LOG-IN",
-      "emailPlaceholder": "e-mail",
-      "passwordPlaceholder": "password",
-      "showPasswordVerificationIntoTooltip": true,
-      "showIconProfile": true
-    }
-  },
+
+
   "header-layout.mobile": {
     "children": ["sticky-layout#mobile"]
   },
   "sticky-layout#mobile": {
-    "children": ["flex-layout.row#mobile"]
+    "children": ["slider-layout#header__slider-top", "flex-layout.row#mobile", "rich-text#section-one"]
   },
   "flex-layout.row#mobile": {
     "children": [
       "drawer",
-      "logo",
-      // "flex-layout.row#spacer",
-      "login",
-      "minicart.v2"
+      "flex-layout.col#logo-desktop",
+      "flex-layout.row#header__bottom--user"
     ],
     "props": {
-      "blockClass": "main-header-mobile",
+      "blockClass": ["main-header-mobile"],
       "preventHorizontalStretch": true,
       "preserveLayoutOnMobile": true,
       "fullWidth": true
     }
   },
   "drawer": {
-    "children": []
+    "title": "Mega menu mobile",
+    "children": [
+      "mega-menu#mobile"
+    ]
+  },
+  "mega-menu#mobile": {
+    "props": {
+      "defaultDepartmentActive": "...",
+      "orientation": "vertical",
+      "openOnly": "vertical"
+    }
   }
 }
