--- a/manifest.json
+++ b/manifest.json
@@ -45,7 +45,9 @@
     "vtex.iframe": "0.x",
     "vtex.breadcrumb": "1.x",
     "vtex.sticky-layout": "0.x",
-    "vtex.add-to-cart-button": "0.x"
+    "vtex.add-to-cart-button": "0.x",
+    "vtex.search": "1.x",
+    "vtex.store-icons": "0.x"
   },
   "peerDependencies": {
     "vtex.mega-menu": "2.x"
