--- a/store/blocks/desktop/components/header/header__menu--departmentgender.jsonc
+++ b/store/blocks/desktop/components/header/header__menu--departmentgender.jsonc
@@ -1,5 +1,6 @@
 {
   "vtex.menu@2.x:submenu#department__gender": {
+    "title": "Department gender",
     "children": [
       "flex-layout.col#header__menu--container"
     ],
@@ -9,6 +10,7 @@
     }
   },
   "flex-layout.col#header__menu--container": {
+    "title": "Header menu container",
     "children": [
       "flex-layout.row#menu__department--gender",
       "flex-layout.row#menu__bottom"
@@ -18,6 +20,7 @@
     }
   },
   "flex-layout.row#menu__department--gender": {
+    "title": "Menu department gender",
     "children": [
       "flex-layout.col#gender__category--best-products",
       "flex-layout.col#gender__category--shoes",
