--- a/store/blocks/desktop/components/header/header__section-one.jsonc
+++ b/store/blocks/desktop/components/header/header__section-one.jsonc
@@ -1,6 +1,6 @@
 {
   "rich-text#section-one": {
-    "title": "text section one",
+    "title": "section discount",
     "props": {
       "textAlignment": "CENTER",
       "textPosition": "CENTER",
