--- a/store/blocks/desktop/components/header/header-row__middle--content.jsonc
+++ b/store/blocks/desktop/components/header/header-row__middle--content.jsonc
@@ -1,25 +1,30 @@
 {
   "flex-layout.col#section__one--text": {
+    "title": "sub header section one help",
     "children":[
       "rich-text#section__one--text"
     ]
   },
   "flex-layout.col#section__two--text": {
+    "title": "sub header section two returns",
     "children":[
       "rich-text#section__two--text"
     ]
   },
   "flex-layout.col#section__three--text": {
+    "title": "sub header section three order tracking",
     "children":[
       "rich-text#section__three--text"
     ]
   },
   "flex-layout.col#section__four--text": {
+    "title": "sub header section three join",
     "children":[
       "rich-text#section__four--text"
     ]
   },
   "rich-text#section__one--text": {
+    "title": "sub header title help",
     "props": {
       "text" : "ayuda",
       "blockClass" : "header__support--text"
@@ -27,6 +32,7 @@
     }
   },
   "rich-text#section__two--text": {
+    "title": "sub header title returns",
     "props": {
       "text" : "cambios y devoluciones",
       "blockClass" : "header__support--text"
@@ -34,6 +40,7 @@
     }
   },
   "rich-text#section__three--text": {
+    "title": "sub header title order tracking",
     "props": {
       "text" : "seguimiento de pedidos",
       "blockClass" : "header__support--text"
@@ -41,6 +48,7 @@
     }
   },
   "rich-text#section__four--text": {
+    "title": "sub header title join",
     "props": {
       "text" : "unete al club",
       "blockClass" : "header__support--text"
