--- a/store/blocks/desktop/components/header/header.jsonc
+++ b/store/blocks/desktop/components/header/header.jsonc
@@ -50,9 +50,69 @@
 
 
   "header-layout.mobile": {
-    "children": ["sticky-layout#mobile"]
-  },
-  "sticky-layout#mobile": {
     "children": ["slider-layout#header__slider-top", "flex-layout.row#mobile", "rich-text#section-one"]
+  },
+  "flex-layout.row#mobile": {
+    "title": "header mobile",
+    "children": [
+      "drawer",
+      // "flex-layout.col#spacer__desktop-one",
+      "flex-layout.col#logo-desktop",
+      // "flex-layout.col#spacer__desktop-two",
+      "flex-layout.row#header__bottom--user"
+    ],
+    "props": {
+      "blockClass": ["main-header-mobile"],
+      "preventHorizontalStretch": true,
+      "preserveLayoutOnMobile": true,
+      "fullWidth": true
+    }
+  },
+  "drawer": {
+    "title": "Mega menu mobile",
+    "children": [
+      "mega-menu#mobile"
+    ],
+    "blocks": ["drawer-header#my-drawer"]
+  },
+  "mega-menu#mobile": {
+    "props": {
+      "defaultDepartmentActive": "...",
+      "orientation": "vertical",
+      "openOnly": "vertical"
+    }
+  },
+  "drawer-header#my-drawer": {
+    "children": ["flex-layout.row#drawer-header"]
+  },
+  "flex-layout.row#drawer-header": {
+    "children": [
+      "flex-layout.col#mega-menu-go-back-btn",
+      "flex-layout.col#logo-desktop",
+      "flex-layout.col#drawer-close-button"
+    ],
+    "props": {
+      "blockClass": "drawer-header",
+      "preventHorizontalStretch": true,
+      "preventVerticalStretch": true,
+      "preserveLayoutOnMobile": true,
+      "fullWidth": true
+    }
+  },
+  "flex-layout.col#drawer-close-button": {
+    "children": ["drawer-close-button"],
+    "props": {
+      "verticalAlign": "middle",
+      "horizontalAlign": "right"
+    }
+  },
+  "flex-layout.col#mega-menu-go-back-btn": {
+    "children": ["mega-menu-go-back-btn"],
+    "props": {
+      "verticalAlign": "middle",
+      "horizontalAlign": "left",
+      "paddingLeft": 4
+    }
   }
 }
+
