--- a/store/blocks/desktop/components/header/header__menu--categorynews.jsonc
+++ b/store/blocks/desktop/components/header/header__menu--categorynews.jsonc
@@ -1,5 +1,6 @@
 {
   "flex-layout.col#news__category--new-men": {
+    "title": "Category new men",
     "children": [
       "rich-text#category__new-men-title",
       "vtex.menu@2.x:menu#new-men__subcategory"
@@ -10,6 +11,7 @@
     }
   },
   "flex-layout.col#news__category--new-women": {
+    "title": "Category new women",
     "children": [
       "rich-text#category__new-women-title",
       "vtex.menu@2.x:menu#new-women__subcategory"
@@ -19,6 +21,7 @@
     }
   },
   "flex-layout.col#news__category--kids-news": {
+    "title": "Category kids news",
     "children": [
       "rich-text#category__kids-news-title",
       "vtex.menu@2.x:menu#new-kids__subcategory"
@@ -28,6 +31,7 @@
     }
   },
   "flex-layout.col#news__category--sports": {
+    "title": "Category sports news",
     "children": [
       "rich-text#category__sports-news-title",
       "vtex.menu@2.x:menu#sports-news__subcategory"
@@ -37,6 +41,7 @@
     }
   },
   "flex-layout.col#news__category--collections": {
+    "title": "Category collections",
     "children": [
       "rich-text#category__collections-title",
       "vtex.menu@2.x:menu#collections__subcategory"
