--- a/store/blocks/desktop/components/header/header.jsonc
+++ b/store/blocks/desktop/components/header/header.jsonc
@@ -56,16 +56,57 @@
     "title": "header mobile",
     "children": [
       "drawer",
+      // "image#home__user--favourites",
+      "header-spacer",
       // "flex-layout.col#spacer__desktop-one",
       "flex-layout.col#logo-desktop",
       // "flex-layout.col#spacer__desktop-two",
-      "flex-layout.row#header__bottom--user"
+      "flex-layout.row#header___mobile--bottom--user"
     ],
     "props": {
       "blockClass": ["main-header-mobile"],
       "preventHorizontalStretch": true,
       "preserveLayoutOnMobile": true,
       "fullWidth": true
+    }
+  },
+  "flex-layout.row#header___mobile--bottom--user" : {
+    "title" : "header bottom-row user section",
+    "children" : [
+      "modal-trigger#example",
+      "image#home__user--search" ,
+      "minicart.v2"
+    ],
+    "props" : {
+      "blockClass" : "header__bottom--user",
+      "colSizing" : "auto",
+      "colGap" : 7
+    }
+  },
+  "image#home__user--search": {
+    "title" : "header user section favorites logo",
+  "props" : {
+    "src" : "assets/img/header/search.svg",
+    "blockClass" : "home__search--logo",
+    "maxWidth" : 20,
+    "maxHeight": 18
+  }
+  },
+  "modal-trigger#example": {
+    "children": [
+      "icon#home__user--login" ,
+      "modal-layout#example"
+    ]
+  },
+  "modal-layout#example": {
+    "children": [
+      "login-content#modal__login"
+    ]
+  },
+  "login-content#modal__login" : {
+    "title" : "header modal login-content",
+    "props" : {
+      "defaultOption" : 0
     }
   },
   "drawer": {
