--- a/store/blocks/desktop/components/home/home.jsonc
+++ b/store/blocks/desktop/components/home/home.jsonc
@@ -1,31 +1,71 @@
 {
   "store.home": {
     "blocks": [
-      "flex-layout.row#home__section-1",
-      "icon#home__icon"
+      "info-card#one",
+      "search-result-layout.customQuery#home__search"
     ]
   },
-  "flex-layout.row#home__section-1": {
-    "title": "DESKTOP Row with text",
+  "info-card#one": {
+    "props": {
+      "id": "info-card-example",
+      "isFullModeStyle": true,
+      "textPosition": "left",
+      "imageUrl": "assets/img/home/home__image--desktop.jpg",
+      "headline": "BAD BUNNY CAMPUS <br/> WILD MOSS",
+      "subhead": "Experimenta la primavera.",
+      "callToActionText": "VER AHORA",
+      "callToActionUrl": "/sale/d",
+      "blockClass": "info-card-example",
+      "textAlignment": "center"
+    }
+  },
+  "search-result-layout.customQuery#home__search": {
+    "props": {
+      "querySchema": {
+        "skusFilter": "ALL",
+        "simulationBehavior": "skip"
+      }
+    },
+    "blocks": [
+      "search-result-layout.desktop#home__search--desktop",
+      "search-result-layout.mobile#home__search--mobile",
+      "search-not-found-layout"
+    ]
+  },
+  "search-result-layout.desktop#home__search--desktop": {
     "children": [
-      "rich-text#section-1"
+      "flex-layout.row#search__result"
     ]
   },
-
-  "rich-text#section-1": {
-    "title": "Text Favorites at desktop",
-    "props": {
-      "blockClass": "",
-      "text": "Favoritos en DESKTOP",
-      "font": "t-heading-2",
-      "textAlignment": "CENTER",
-      "textPosition": "CENTER"
-    }
+  "search-result-layout.mobile#home__search--mobile": {
+    "children": [
+      "flex-layout.row#search__result"
+    ]
   },
-  "icon#home__icon": {
-    "props": {
-      "id": "sti-clock",
-      "size": 30
-    }
+  "flex-layout.row#search__result": {
+    "children": [
+      "flex-layout.col#home__results--rearch"
+    ]
+  },
+  "flex-layout.col#home__results--rearch": {
+    "children": [
+      "search-content#home__results--search"
+    ]
+  },
+  "search-content#home__results--search": {
+    "blocks": ["gallery", "not-found"]
+  },
+  "gallery": {
+    "blocks": ["product-summary.shelf"]
+  },
+  "product-summary.shelf": {
+    "children": [
+      "product-summary-name",
+      "product-summary-description",
+      "product-summary-image",
+      "product-summary-price",
+      "product-summary-sku-selector",
+      "add-to-cart-button"
+    ]
   }
 }
