feat: search bar mobile

--- a/store/blocks/desktop/components/header/header-row__bottom--container.jsonc
+++ b/store/blocks/desktop/components/header/header-row__bottom--container.jsonc
@@ -18,7 +18,8 @@
   "flex-layout.col#spacer__desktop-one": {
     "title": "spacer header one",
     "props": {
-      "blockClass": "header__spacer-one"
+      "blockClass": "header__spacer-one",
+      "width": "grow"
     }
   },
   "flex-layout.row#header__bottom--menu" : {
@@ -34,7 +35,9 @@
   "flex-layout.col#spacer__desktop-two": {
     "title": "spacer header two",
     "props": {
-      "blockClass": "spacer__desktop-two"    }
+      "blockClass": "spacer__desktop-two",
+      "width": "grow"
+    }
   },
   "flex-layout.row#header__bottom--user" : {
     "title" : "header bottom-row user section",
