--- a/store/blocks/desktop/components/header/header-row__middle--container.jsonc
+++ b/store/blocks/desktop/components/header/header-row__middle--container.jsonc
@@ -9,7 +9,8 @@
     ],
     "props": {
       "colSizing": "auto",
-      "blockClass": "header__section--subheader"
+      "blockClass": "header__section--subheader",
+      "fullWidth": "true"
     }
   }
 }
